--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>Hello boss</h1>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et earum, dolores tenetur temporibus aliquid totam? Libero quisquam ab necessitatibus velit ipsam! Beatae hic eveniet ratione molestias facilis recusandae, id unde./p>
+    
 </body>
 </html>
