--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
 </head>
+<style>
+    h1{
+        font-size: 30px;
+        text-align: center;
+        margin: 0px;
+    }
+    p{
+        font-weight: bold;
+        font-size: 20px;
+    }
+    body{
+        background-color: rgb(136, 212, 100);
+    }
+</style>
+
 <body>
     
-    <h1>Hello boss</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et earum, dolores tenetur temporibus aliquid totam? Libero quisquam ab necessitatibus velit ipsam! Beatae hic eveniet ratione molestias facilis recusandae, id unde. </p>
-    <img src="https://www.bing.com/images/search?view=detailV2&ccid=SqEICC59&id=EB17709CF0D2FA2E7F934AC7B1FD9E143E5B8723&thid=OIP.SqEICC59PL1VrdefhGEqqgHaCg&mediaurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.4aa108082e7d3cbd55add79f84612aaa%3frik%3dI4dbPhSe%252fbHHSg%26riu%3dhttp%253a%252f%252fpurepng.com%252fpublic%252fuploads%252flarge%252fpurepng.com-google-logo-2015brandlogobrand-logoiconssymbolslogosgoogle-6815229372333mqrr.png%26ehk%3dewmaCOvP0Ji4QViEJnxSdlrYUrTSTWhi8nZ9XdyCgAI%253d%26risl%3d%26pid%3dImgRaw%26r%3d0&exph=3382&expw=10000&q=google+logo&simid=608039542762053437&FORM=IRPRST&ck=ED0BF74941C753EFFD37866766BF38F4&selectedIndex=0" alt="">
+    <h1>Project kelas 10/11</h1>
+    <p>1.Pokedex Imitation in Python</p>
+    <img src="./projects/10/Screenshot 2023-06-11 200022.png" alt="">
+    <p>2. Flash card using HTML</p>
+    <img src="./projects/11/Screenshot 2023-06-11 201448.png">
+
 </body>
 </html>
