--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body>
     
     <h1>Project kelas 10/11</h1>
-    <p>1.Pokedex Imitation in Python</p>
+    <p>1.Pokedex Imitation in Python (10)</p>
     <img src="./projects/10/Screenshot 2023-06-11 200022.png" alt="">
-    <p>2. Flash card using HTML</p>
+    <p>2. Flash card using HTML (11)</p>
     <img src="./projects/11/Screenshot 2023-06-11 201448.png">
 
 </body>
